--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <div id="display-page" style="display: none">
     <h1>That event happens at</h1>
     <p id="time-output"></p>
+    <a id="clipboard-copy" href="#">Copy to clipboard</a>
     <p>Discord Timestamp: <span id="discord-ts-output"></span></p>
   </div>
 
